force-app/main/default/objects/Financial_Account__c/fields/Category_List__c.field-meta.xml
<CustomField>
    <fullName>Category_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category List</label>
    <referenceTo>Category_List__c</referenceTo>
    <relationshipLabel>Financial Accounts</relationshipLabel>
    <relationshipName>Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>