force-app/main/default/objects/Financial_Account__c/fields/Detailed_Category__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detailed Category</label>
    <referenceTo>Detailed_Category__c</referenceTo>
    <relationshipLabel>Financial Accounts</relationshipLabel>
    <relationshipName>Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>