force-app/main/default/objects/Financial_Account__c/fields/Items_To_Reconcile__c.field-meta.xml
<CustomField>
    <fullName>Items_To_Reconcile__c</fullName>
    <label>Items To Reconcile</label>
    <summaryFilterItems>
        <field>Financial_Account_LineItem__c.Status__c</field>
        <operation>equals</operation>
        <value>New Transactions</value>
    </summaryFilterItems>
    <summaryForeignKey>Financial_Account_LineItem__c.Financial_Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>