force-app/main/default/objects/Financial_Account__c/fields/Last_4_CC_Digits__c.field-meta.xml
<CustomField>
    <fullName>Last_4_CC_Digits__c</fullName>
    <label>Last 4 CC Digits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>