force-app/main/default/objects/Financial_Account__c/fields/Total_Records__c.field-meta.xml
<CustomField>
    <fullName>Total_Records__c</fullName>
    <label>Total Records</label>
    <summaryForeignKey>Financial_Account_LineItem__c.Financial_Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>