force-app/main/default/objects/Financial_Account__c/fields/Total_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_Spent__c</fullName>
    <label>Total Spent</label>
    <summarizedField>Financial_Account_LineItem__c.Transaction_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Financial_Account_LineItem__c.Type__c</field>
        <operation>equals</operation>
        <value>SPENT</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Financial_Account_LineItem__c.Status__c</field>
        <operation>equals</operation>
        <value>Reconciled</value>
    </summaryFilterItems>
    <summaryForeignKey>Financial_Account_LineItem__c.Financial_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>